--- a/.gitattributes
+++ b/.gitattributes
@@ -28,6 +28,7 @@
 /.editorconfig  export-ignore
 /.gitattributes export-ignore
 /.gitignore     export-ignore
+/LICENSE
 
 # Игнорировать шаблоны файлов установки (для редакций веб-приложений они свои)
 /queries/tables.php    export-ignore
